# QtPlayer

./: .gitignore  CMakeLists.txt  IconButton.qml  Main.qml  PlayPage.qml  README.md  Resources.qrc  SliderTest.qml  TestButton.qml  innosetupFile.iss  main.cpp  playhistory.cpp  playhistory.h  utils.js
resources/components/PlayPage/: MyRec.qml
resources/icons/: AppIcon.rc
src/cpp/PlayHistory/: playhistory.cpp  playhistory.h
src/cpp/config/: globalconfig.h  playpageconfig.h
src/cpp/configobject/: configobject.cpp  configobject.h  mylistmodel.cpp  mylistmodel.h
src/cpp/mainpage/: mainpageconfig.h  playcardmodel.cpp  playcardmodel.h  videoprocesser.cpp  videoprocesser.h
src/cpp/utilities/: utilities.cpp  utilities.h
src/cpp/utilities/exception/: myexception.cpp  myexception.h
src/cpp/utilities/imageprovider/: myimageprovider.cpp  myimageprovider.h
src/cpp/utilities/logger/: logger.cpp  logger.h
src/qml/: Main.qml
src/qml/MyComponents/: IconButton.qml  ImageButton.qml  MyCardView.qml  MyGridView.qml  MyImage.qml  MyListView.qml  MyMenu.qml  MyStackView.qml  NotificationView.qml
src/qml/PlayPage/: EpisodeList.qml  IconButton.qml  PauseIcon.qml  PlayPage-New.qml  PlayPage.qml  ProgressBar.qml  VideoBody.qml  VideoFooter.qml  VideoHeader.qml  VideoProgressBar.qml  utils.js
translation/: QtPlayer_chinese.ts
